--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -696,4 +696,8 @@ copy of the Program in return for a fee.\n\n
 
                      END OF TERMS AND CONDITIONS
     </string>
+    <string name="manage_account">Manage Account</string>
+    <string name="welcome">Welcome</string>
+    <string name="add_id">Add your member ID to get started</string>
+    <string name="add_info">Add User Info</string>
 </resources>
